infrastructure/flux-webhook/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
  - name: main
    namespace: envoy-system
    sectionName: https
  hostnames:
    - "flux-webhook.hackcorp.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: notification-controller
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
